[package]
name = "bitlog-server"
version = "0.1.0"
authors = ["Bernardo Amorim <contato@bamorim.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
base64 = "0.2.1"
redis = "0.9.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "redis_pool"]