[package]
name = "bitlog-server"
version = "0.1.0"
authors = ["Bernardo Amorim <contato@bamorim.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
base64 = "0.11.0"
redis = "0.9.0"
rocket_okapi = "0.3.0"
okapi = "0.3.0"
schemars = "0.6.1"
rocket_cors = "0.5.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "redis_pool"]